# rostam

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  ai_lab_emoji_needed.txt  build.rs  emoji.txt  how a871ca2  i18n.json
files/: youtube_links.txt
guides/: frankenstein-emoji-buttons.md  frankenstein-reference.md
separation-service/: cpu_broker.py  cpu_monitor.py  install.sh  main.py  requirements.txt  start.sh
src/: bot.rs  config.rs  cookie_pool.rs  i18n.rs  main.rs  youtube.rs
src/admin/: mod.rs
src/app/: dispatch.rs  mod.rs  startup.rs  state.rs
src/cookie_pool/: discover.rs  format.rs  mod.rs  pool.rs  snapshot.rs  types.rs
src/database/: mod.rs
src/database/posfreSQL/: postgresql.rs  schema.sql
src/denoise/: handle.rs  mod.rs
src/emoji/: cache.rs  flow.rs  handler.rs  import.rs  mod.rs  panel.rs  smart_name.rs  store.rs
src/emoji/cache/: loader.rs  mod.rs  render.rs  types.rs
src/emoji/handler/: addemoji.rs  callback.rs  cmd.rs  extract.rs  helpers.rs  (+10 more)
src/gemini_watermark/: handle.rs  mod.rs  remove.rs
src/i18n/: emoji_map.rs  entities.rs  lookup.rs  mod.rs  premium_md.rs
src/modules/: cookie_refresher.rs  mod.rs
src/separation/: client.rs  error.rs  handle.rs  mod.rs  types.rs
src/stats/: mod.rs  query.rs
src/stt/: config.rs  deepfilter.rs  handle.rs  mod.rs  types.rs  vosk.rs
src/upscale/: handle.rs  mod.rs
src/youtube/: download.rs  extract.rs  fetch.rs  format.rs  handle.rs  jalali.rs  lang_names.rs  mod.rs  quality_keyboard.rs  selection.rs  trace.rs  types.rs
systemd/: abc.env.example  abc.service  separation.service
(+31 files in other folders)
