[package]
name = "ros-telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
frankenstein = { version = "0.50", features = ["client-reqwest", "trait-async"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time"] }
tokio-postgres = "0.7"
serde_json = "1"
unicode_names2 = "2"
chrono = { version = "0.4", features = ["std"] }
reqwest = { version = "0.12", features = ["rustls-tls", "multipart", "json"], default-features = false }
chrono-tz = "0.10"
notify = "6"
futures = "0.3"
rand = "0.8"
hound = "3.5"
vosk = "0.3"
libc = "0.2"

[profile.dev]
opt-level = 0
